tests/parsing/smtlib/v2.7/errors/011_exists_bad_var_list_2.smt2
(set-logic ALL)
(assert (exists blah true))
